# Fontconfig-Android-translator

./: README.md  UpcomingReleaseNotes.md  build.gradle  doclean  doincrementversion  settings.gradle
.github/: installAndroidTools.sh
.github/workflows/: build.yml  manualVersionIncrement_major.yml  manualVersionIncrement_minor.yml  manualVersionIncrement_patch.yml  privilegedBuild.yml  publishRelease.yml  unprivilegedBuild.yml
ci-scripts/: updateDownstreamVersion
lib/: build.gradle
lib/src/androidTest/cpp/: CMakeLists.txt  TranslatorInstrumentedTests.cc
lib/src/androidTest/java/com/viliussutkus89/android/fontconfigtranslator/: TranslatorInstrumentedTests.java
lib/src/main/: AndroidManifest.xml
lib/src/main/java/com/viliussutkus89/android/fontconfigtranslator/: FontconfigTranslator.java
